# ragcode

./: .gitignore  README.md  pyproject.toml
src/ragcode/: cli.py  config.py  embeddings.py  explain_where.py  indexer.py  inspect_dump.py  logging.py  query.py  server.py  symbols.py
src/ragcode/profiles/: pint.toml
